==> aws/amazon-freertos/vendors/espressif/boards/esp32/ports/common_io/iot_gpio.c <==
#include "stdint.h"
#include "stdlib.h"
#include "esp_log.h"
#include "iot_gpio.h"
#include "driver/gpio.h"
#define ESP_INTR_FLAG_DEFAULT 0

IotGpioHandle_t iot_gpio_open( int32_t lGpioNumber )
{
    if (lGpioNumber < 0 || lGpioNumber > 40) {
        ESP_LOGE(TAG, "Invalid  arguments %s", __func__);
        return NULL;
    }
    if (!(0x01 & gpio_status_bitmask >> lGpioNumber)) {
        gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) calloc(1, sizeof(gpio_ctx_t));
        if (gpio_ctx == NULL) {
            ESP_LOGE(TAG, "Could not allocate memory for gpio context");
            return NULL;
        }
        gpio_ctx->gpio_num = lGpioNumber;
        gpio_ctx->iot_gpio_conf.pin_bit_mask = BIT64(gpio_ctx->gpio_num);
        gpio_config(&gpio_ctx->iot_gpio_conf);
        gpio_status_bitmask = gpio_status_bitmask | BIT64(gpio_ctx->gpio_num);
        IotGpioHandle_t iot_gpio_handler = (void *)gpio_ctx;
        ESP_LOGD(TAG, "%s GPIO Number %d, GPIO bitmask %d", __func__, lGpioNumber, gpio_status_bitmask);
        return iot_gpio_handler;
    }
    return NULL;
}

int32_t iot_gpio_ioctl( IotGpioHandle_t const pxGpio,
                        IotGpioIoctlRequest_t xRequest,
                        void *const pvBuffer )
{
    esp_err_t ret;
    if (pxGpio == NULL || pvBuffer == NULL) {
        ESP_LOGD(TAG, "Invalid  arguments %s", __func__);
        return IOT_GPIO_INVALID_VALUE;
    }
    gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) pxGpio;
    //gpio_config_t io_conf = {0};
    switch (xRequest) {
    case eSetGpioFunction: {
        gpio_ctx->set_function_val = *(uint8_t *)pvBuffer;
        //FIXME what is this ?
        return IOT_GPIO_SUCCESS;
        //return IOT_GPIO_FUNCTION_NOT_SUPPORTED;
        break;
    }
    case eSetGpioDirection: {
        IotGpioDirection_t *set_direction = (IotGpioDirection_t *)pvBuffer;
        iot_hal_gpio_set_direction(set_direction, &gpio_ctx->iot_gpio_conf);
        gpio_set_direction(gpio_ctx->gpio_num, gpio_ctx->iot_gpio_conf.mode);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eSetGpioPull: {
        IotGpioPull_t *gpio_set_push_pull = (IotGpioPull_t *)pvBuffer;
        iot_hal_gpio_set_pullup_pulldown(gpio_set_push_pull, &gpio_ctx->iot_gpio_conf);
        if (gpio_ctx->iot_gpio_conf.pull_up_en) {
            gpio_pullup_en(gpio_ctx->gpio_num);
        } else {
            gpio_pullup_dis(gpio_ctx->gpio_num);
        }
        if (gpio_ctx->iot_gpio_conf.pull_down_en) {
            gpio_pulldown_en(gpio_ctx->gpio_num);
        } else {
            gpio_pulldown_dis(gpio_ctx->gpio_num);
        }
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eSetGpioOutputMode: {
        IotGpioOutputMode_t *gpio_set_op_mode = (IotGpioOutputMode_t *)pvBuffer;
        iot_hal_gpio_set_output_mode(gpio_set_op_mode, &gpio_ctx->iot_gpio_conf);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eSetGpioInterrupt: {
        IotGpioInterrupt_t *gpio_set_interrupt = (IotGpioInterrupt_t *)pvBuffer;
        iot_hal_gpio_set_interrupt(gpio_set_interrupt, &gpio_ctx->iot_gpio_conf);
        gpio_set_intr_type(gpio_ctx->gpio_num, gpio_ctx->iot_gpio_conf.intr_type);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eSetGpioSpeed: {
        //need to check the existing APIS
        return IOT_GPIO_FUNCTION_NOT_SUPPORTED;
        break;
    }
    case eSetGpioDriveStrength: {
        gpio_drive_cap_t *gpio_drive_strength = (gpio_drive_cap_t *)pvBuffer;
        ret = gpio_set_drive_capability(gpio_ctx->gpio_num, *gpio_drive_strength);
        if (ret != ESP_OK) {
            ESP_LOGD(TAG, "Failed in setting drive capability %d", ret);
            return IOT_GPIO_WRITE_FAILED;
        }
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioFunction: {
        *(uint32_t *)pvBuffer = gpio_ctx->set_function_val;
        //FIXME What is this ?
        //return IOT_GPIO_FUNCTION_NOT_SUPPORTED;
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioDirection: {
        IotGpioDirection_t *get_direction = (IotGpioDirection_t *)pvBuffer;
        iot_hal_gpio_get_direction(get_direction, &gpio_ctx->iot_gpio_conf);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioPull: {
        IotGpioPull_t *gpio_get_push_pull = (IotGpioPull_t *)pvBuffer;
        iot_hal_gpio_get_pullup_pulldown(gpio_get_push_pull, &gpio_ctx->iot_gpio_conf);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioOutputType: {
        IotGpioOutputMode_t *gpio_get_op_mode = (IotGpioOutputMode_t *)pvBuffer;
        iot_hal_gpio_get_output_mode(gpio_get_op_mode, &gpio_ctx->iot_gpio_conf);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioInterrupt: {
        IotGpioInterrupt_t *gpio_get_interrupt = (IotGpioInterrupt_t *)pvBuffer;
        iot_hal_gpio_get_interrupt(gpio_get_interrupt, &gpio_ctx->iot_gpio_conf);
        return IOT_GPIO_SUCCESS;
        break;
    }
    case eGetGpioSpeed: {

        return IOT_GPIO_FUNCTION_NOT_SUPPORTED;
        break;
    }
    case eGetGpioDriveStrength: {
        gpio_drive_cap_t *gpio_drive_strength = (gpio_drive_cap_t *)pvBuffer;
        ret = gpio_get_drive_capability(gpio_ctx->gpio_num, gpio_drive_strength);
        if (ret != ESP_OK) {
            ESP_LOGD(TAG, "Failed in getting drive capability %d", ret);
            return IOT_GPIO_READ_FAILED;
        }
        return IOT_GPIO_SUCCESS;
        break;
    }
    default: {
        return IOT_GPIO_INVALID_VALUE;
        break;
    }
    }
}

void iot_gpio_set_callback( IotGpioHandle_t const pxGpio,
                            IotGpioCallback_t xGpioCallback,
                            void *pvUserContext )
{
    esp_err_t ret = ESP_OK;
    if (pxGpio == NULL || xGpioCallback == NULL) {
        ESP_LOGD(TAG, "Invalid  arguments %s", __func__);
        return;
    }
    gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) pxGpio;
    ret = gpio_install_isr_service(ESP_INTR_FLAG_DEFAULT);
    if (ret == ESP_ERR_NO_MEM) {
        ESP_LOGE(TAG, "Failed to install ISR service");
        return;
    }
    gpio_ctx->gpio_cb_func[gpio_ctx->gpio_num].func = xGpioCallback;
    gpio_ctx->gpio_cb_func[gpio_ctx->gpio_num].arg2 = pvUserContext;
    ret = gpio_isr_handler_add(gpio_ctx->gpio_num, gpio_cb, (void *)gpio_ctx);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "Failed to add isr handler %d", ret);
        return;
    }
    gpio_int_status_bitmask = gpio_int_status_bitmask | BIT64(gpio_ctx->gpio_num);
    ESP_LOGD(TAG, "%s GPIO interrupt bitmask %d", __func__, gpio_int_status_bitmask);
}

int32_t iot_gpio_read_sync( IotGpioHandle_t const pxGpio,
                            uint8_t *pucPinState )
{
    if (pxGpio == NULL) {
        ESP_LOGD(TAG, "Invalid  arguments %s", __func__);
        return IOT_GPIO_INVALID_VALUE;
    }
    gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) pxGpio;
    *pucPinState = gpio_get_level(gpio_ctx->gpio_num);

    return IOT_GPIO_SUCCESS;
}

int32_t iot_gpio_write_sync( IotGpioHandle_t const pxGpio,
                             uint8_t pucPinState )
{
    esp_err_t ret = ESP_OK;
    if (pxGpio == NULL) {
        ESP_LOGD(TAG, "Invalid  arguments %s", __func__);
        return IOT_GPIO_INVALID_VALUE;
    }
    gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) pxGpio;
    ret = gpio_set_level(gpio_ctx->gpio_num, pucPinState);
    return (ret == ESP_OK) ? IOT_GPIO_SUCCESS : IOT_GPIO_WRITE_FAILED;
}

int32_t iot_gpio_close( IotGpioHandle_t const pxGpio )
{
    if (pxGpio == NULL) {
        ESP_LOGD(TAG, "Invalid  arguments %s", __func__);
        return IOT_GPIO_INVALID_VALUE;
    }
    gpio_ctx_t *gpio_ctx = (gpio_ctx_t *) pxGpio;
    if (gpio_ctx->gpio_num >= 0 && GPIO_IS_VALID_GPIO(gpio_ctx->gpio_num) && (0x01 & gpio_status_bitmask >> gpio_ctx->gpio_num)) {
        ESP_LOGD(TAG, "%s GPIO Number %d, GPIO bitmask %d, GPIO interrupt bitmask %d",
            __func__, gpio_ctx->gpio_num, gpio_status_bitmask, gpio_int_status_bitmask);
        if (0x01 & gpio_int_status_bitmask >> gpio_ctx->gpio_num) {
            gpio_isr_handler_remove(gpio_ctx->gpio_num);
            gpio_int_status_bitmask = gpio_int_status_bitmask & ~(BIT64(gpio_ctx->gpio_num));
        }
        gpio_status_bitmask = gpio_status_bitmask & ~(BIT64(gpio_ctx->gpio_num));
        free(pxGpio);
        return IOT_GPIO_SUCCESS;
    } else {
        return IOT_GPIO_INVALID_VALUE;
    }
}
